# ShaderExperiments

exp1/source/: Main.cpp
exp2/source/: Main.cpp
exp2/source/resources/shaders/glsl330/: fade.fs  fadeTime.fs
exp3/: CMakeLists.txt
exp3/source/: Main.cpp
exp3/source/resources/shaders/glsl330/: fadeTime.fs
exp4/source/: Main.cpp
exp4/source/resources/shaders/glsl330/: fade.fs  fadeTime.fs  trail.fs
source/resources/shaders/glsl330/: trail.fs
